# antiquated

./: .gitignore  pyproject.toml
src/antiquated/internal/: comparison.py
